Try to fix buglinks

--- a/articles/_posts/2013-06-10-cat1-tag1.md
+++ b/articles/_posts/2013-06-10-cat1-tag1.md
@@ -8,6 +8,7 @@ tags:
 - tag2
 - tag3
 category: categorietest1
+base_url: "http://link-webcreations.github.io/juetpy/"
 ---
 Vbi curarum abiectis ponderibus aliis tamquam nodum et codicem difficillimum Caesarem convellere nisu valido cogitabat, eique deliberanti cum proximis clandestinis conloquiis et nocturnis qua vi, quibusve commentis id fieret, antequam effundendis rebus pertinacius incumberet confidentia, acciri mollioribus scriptis per simulationem tractatus publici nimis urgentis eundem placuerat Gallum, ut auxilio destitutus sine ullo interiret obstaculo.
 
